
2023-01-21  Simon Sobisch <simonsobisch@gnu.org>

	* cobfile.c, gcdiff.c: fixed some warnings about signed char

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: minor validation - check for empty parameters

2022-10-13  Simon Sobisch <simonsobisch@gnu.org>

	* cobfile.c: fixed compiler warnings -Wunused-result
	* cobfile.c: handle --quiet to output less progress info

2022-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: added -dumpversion (called from libcob)

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: include libcob headers relative and tarstamp.h early

2021-05-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use double-dash for long options

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (cobcrun_print_version, cobcrun_print_usage): msgid change
	  moving URLs to parameter per gettext-guidelines
	* cobcrun.c: removed unused includes

2021-05-04  Ron Norman <rjn@inglenet.com>

	* cobfile.c: Only use 'readline' if defined in config.h

2021-04-30  Ron Norman <rjn@inglenet.com>

	* cobfile.c: Now able to generate COBOL program to copy file
	* gcdiff.c: Fixed search for  gcdiff.conf

2021-04-27  Ron Norman <rjn@inglenet.com>

	* cobfile.c: Initial version of file copy program

2021-03-04  Ron Norman <rjn@inglenet.com>

	* gcdiff.c: Fix bug in matching date/time pattern

2020-12-22  Ron Norman <rjn@inglenet.com>
	* cobcrun.c: call  cob_init_nomain  as all version info is now coming 
			from the I/O modules themselves

2020-12-05  Ron Norman <rjn@inglenet.com>

	* gcdiff.c: Also look for run options $COB_CONFIG_DIR/gcdiff.conf
	           New -U  option removes trailling underscore and leaves spaces
			   New feature to compare hex values as long as the start with
			   ' 0x' and value is the same. Avoids 32/64 bit issues.

2020-10-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: when in verbose mode additionally ask libcob for
	  version summary, showing library details
