@@ -351,7 +351,7 @@ dropField (cob_field *f)
 
 /* Does the 'word' match within the string */
 static int
-matchWord (const char *word, unsigned char *defs, char *str, int *pos )
+matchWord (const char *word, char *defs, char *str, int *pos )
 {
 	int	j, k, doeq, doend;
 	int	ln = strlen (word);
@@ -371,12 +371,12 @@ matchWord (const char *word, unsigned char *defs, char *str, int *pos )
 	if (strncasecmp (defs + *pos, word, ln) != 0)
 		return 0;
 	k = *pos + ln;
-	while (isspace(defs[k])) k++;
+	while (isspace((unsigned char)defs[k])) k++;
 	if (doeq) {
 		if (defs[k] != marker)
 			return 0;
 		k++;
-		while (isspace(defs[k])) k++;
+		while (isspace((unsigned char)defs[k])) k++;
 	}
 	if (doend) {
 		for (j = 0; defs[k] != endmark
@@ -463,7 +463,7 @@ getRecsz (cob_file *fl, char *def)
 /* Parse out the file definition */
 static void
 parseFile (cob_file *fl, const char *select, int rcsz,
-		unsigned char *defs, char *copy, char *keys[])
+		char *defs, char *copy, char *keys[])
 {
 	char	val[1024], both[1024+18], filename[1024];
 	int		j, k, ln, idx;
@@ -478,7 +478,7 @@ parseFile (cob_file *fl, const char *select, int rcsz,
 	fl->access_mode = COB_ACCESS_SEQUENTIAL;
 	for (k=0; defs[k] != 0; k++) {
 		if (k==0
-		 || isspace(defs[k-1])) {
+		 || isspace((unsigned char)defs[k-1])) {
 			if (matchWord ("FILE=", defs, val, &k)) {
 				ln = strlen (val);
 				dropField (fl->assign);
@@ -918,9 +918,9 @@ main(
 	int		opt,idx,i,j,k,skip,ncopy;
 	FILE	*ref;
 	cob_file flin[1], flout[1];
-	unsigned char	*env, *p;
-	unsigned char	buf[1024], conffile[256], val[128];
-	unsigned char	cmd[2560], indef[2560], outdef[2560];
+	char	*env, *p;
+	char	buf[1024], conffile[256], val[128];
+	char	cmd[2560], indef[2560], outdef[2560];
 
 #ifdef	HAVE_SETLOCALE
 	setlocale (LC_ALL, "");
@@ -952,7 +952,7 @@ main(
 			k = trim_line (buf);
 			if (buf[0] == '-') {	/* Option for cobfile ?*/
 				opt = buf[1];
-				for (i=2; isspace(buf[i]); i++);
+				for (i=2; isspace((unsigned char)buf[i]); i++);
 				set_option(conffile,opt,&buf[i]);
 			}
 		}
@@ -1025,7 +1025,7 @@ main(
 					continue;
 				}
 				for (k=5; cmd[k] != 0; k++) {
-					if (isspace(cmd[k-1])) {
+					if (isspace((unsigned char)cmd[k-1])) {
 						if (matchWord ("SKIP=", cmd, val, &k)) {
 							skip = atoi (val);
 						} else
@@ -1046,7 +1046,7 @@ main(
 				if (strncasecmp (cmd,"RUN ",4) == 0)
 					runit = 1;
 				for (k=4; cmd[k] != 0; k++) {
-					if (isspace(cmd[k-1])) {
+					if (isspace((unsigned char)cmd[k-1])) {
 						if (matchWord ("SKIPIF[", cmd, val, &k)) {
 							j = sprintf(skipif," \tIF %s\n",val);
 							j += sprintf(&skipif[j]," \t\tGO TO GET-NEXT-100.\n");
